// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Share> renders 1`] = `
<View
  pointerEvents="auto"
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-only"
    style={
      Array [
        Object {
          "borderRadius": 3,
          "marginHorizontal": 5,
        },
        false,
        undefined,
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "borderRadius": 3,
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "height": 45,
            "minWidth": 45,
            "paddingHorizontal": 30,
          },
          false,
          false,
          false,
          false,
          Object {
            "backgroundColor": "#9b9b9b",
          },
          false,
          false,
          false,
          false,
          false,
          false,
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            },
            undefined,
            undefined,
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            Object {
              "fontWeight": "600",
            },
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "marginLeft": 10,
            },
          ]
        }
      >
        Share
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 3,
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<Share> when {accentColor} 1`] = `
<share
  accentColor="red"
/>
`;

exports[`<Share> when {caption} 1`] = `
<share
  caption="Hello world"
/>
`;

exports[`<Share> when {title} 1`] = `
<share
  title="Press me"
/>
`;
